import("//ui/webui/resources/tools/build_webui.gni")

assert(is_android || is_linux || is_chromeos || is_win)

print(">>> webui MMRR hello_world/BUILD.gn")



build_webui("build") {
  grd_prefix = "hello_world"

  static_files = [ "hello_world.html" ]

  non_web_component_files = [ "hello_world.ts" ]


  mojo_files_deps = [
    "//chrome/browser/ui/webui/hello_world:mojo_bindings_ts__generator",
    "//chrome/browser/web_applications/mojom:mojom_web_apps_enum_ts__generator",
  ]

  mojo_files = [
    "$root_gen_dir/chrome/browser/ui/webui/hello_world/hello_world.mojom-webui.ts",
    "$root_gen_dir/chrome/browser/web_applications/mojom/user_display_mode.mojom-webui.ts",
  ]
  ts_composite = true
  ts_deps = [
    "//ui/webui/resources/cr_elements:build_ts",
    "//ui/webui/resources/js:build_ts",
    "//ui/webui/resources/mojo:build_ts",
  ]
  ts_definitions = [ "//tools/typescript/definitions/metrics_private.d.ts" ]
  webui_context_type = "trusted"
}



