# Copyright 2022 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

print(">>> SujitSujit Running hello_world/BUILD.gn")

assert(is_win || is_mac || is_linux)

mojom("mojo_bindings") {
  sources = [ "hello_world.mojom" ]
  webui_module_path = "/"

  public_deps = [
    "//chrome/browser/web_applications/mojom:mojom_web_apps_enum",
    "//mojo/public/mojom/base",
    "//url/mojom:url_mojom_gurl",
  ]

  cpp_typemaps = [
    
  ]
}
